2008-08-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Fixed ordering of library search, thanks Jorgen Austvik
 test/test_helpers.hxx, test085.cxx:
  - Moved string_traits<result> into test helpers for reuse.
 test/test008.cxx:
  - Converted to test framework.
2008-08-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test004.cxx, test/test005.cxx, test/test006.cxx, test/test007.cxx:
  - Converted to test framework.
2008-08-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test002.cxx:
  - Converted to test framework.
2008-07-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test085.cxx, test/test092.cxx:
  - Converted to test framework.
 test/test_helpers.hxx, test/unit/test_test_helpers.cxx:
  - PQXX_CHECK_THROWS() swallowed all std::exception throws!
2008-07-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Don't escape whitespace (which isn't always isprint())
  - Closer match to what libpq's escaping functions seem to do
 test/test_helpers.hxx:
  - New "fail if you got here" macro
  - Check for bad_alloc as a special case
 test/test000.cxx, test/test001.cxx, test/test090.cxx, test/test092.cxx:
  - Use test helpers.  Really helps!
2008-07-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx, src/connection_base.cxx, src/util.cxx:
  - Retired old, unsafe escaping functions.
  - Moved last-ditch escaping workaround into only place it's used.
  - Made escape_param() safe where possible.
  - Moved explanation of SQL injection from util to connection.
2008-07-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/gcc-4.2/config-internal-compiler.h,
 config/sample-headers/compiler/gcc-4.2/config-public-compiler.h,
 config/sample-headers/compiler/VisualC++.NET-2003/config-public-compiler.h:
  - Enable "long long" support.
 config/sample-headers/libpq/8.3/config-internal/libpq.h:
  - Added sample headers for more recent gcc and libpq.
 include/pqxx/compiler-public.h, win32/vc-libpqxx.mak.template: